# GAMES101_Assigments

./: .gitignore  README.md
00/: CMakeLists.txt
01/: CMakeLists.txt  conanfile.txt
02/: CMakeLists.txt  conanfile.txt  main.cpp
03/: CMakeLists.txt  main.cpp
HW0/: main.cpp  xmake.lua
HW1/: xmake.lua
HW1/src/: main.cpp
HW2+/: xmake.lua
HW2+/src/: main.cpp  rasterizer.cpp  rasterizer.hpp
HW2/src/: rasterizer.cpp
HW3/: xmake.lua
HW3/src/: main.cpp  rasterizer.cpp
HW4/: xmake.lua
HW4/src/: main.cpp
HW5/: xmake.lua
HW5/src/: Object.hpp  Renderer.cpp  Sphere.hpp  Triangle.hpp
HW6/: xmake.lua
HW6/src/: BVH.cpp  BVH.hpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp  main.cpp
HW7/: xmake.lua
HW7/src/: main.cpp
